@@ -2,26 +2,34 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
-import java.util.Arrays;
 import java.util.List;
 
 public class Afficheur extends JFrame {
 
     private final List<Bin> bins;
 
-    private double ratio = 0.9;
+    private JPanel[] binsPanels;
+
+    private double ratio;
 
     public Afficheur(List<Bin> bins) {
         this.bins = bins;
-        if (bins.get(0).height<=250) {
-            ratio = 0.9;
-        }
-        else if (bins.get(0).height>=1000) {
-            ratio = 0.2;
+        this.binsPanels = new JPanel[bins.size()];
+        if (bins.getFirst().height <= 250) {
+            if (bins.size()>=19){ratio = 0.8;}
+            else {ratio = 1.0;}
+        } else if (bins.getFirst().height >= 1000) {
+            if (bins.size()>=3){ratio = 0.1;}
+            else {ratio = 0.2;}
+        } else if (bins.getFirst().height >= 500) {
+            if (bins.size()>=19){ratio = 0.2;}
+            else if(bins.size()<=8) {ratio = 0.7;}
         }
         else {
-            ratio =0.5;
+            ratio = 0.5;
         }
+    }
+    public void display() {
         setTitle("Afficheur de Bins");
         setDefaultCloseOperation(EXIT_ON_CLOSE);
         setExtendedState(JFrame.MAXIMIZED_BOTH);
@@ -38,35 +46,29 @@ public class Afficheur extends JFrame {
 
         // Ajout des boutons
         JMenuItem zoomPlus = new JMenuItem("+");
-        zoomPlus.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                if (ratio + 0.1 <= 1)
-                {
-                    ratio = Math.round((ratio + 0.1) * 10.0) / 10.0;
-                    System.out.println(ratio);
-                    afficherBins();
-                    revalidate();
-                    repaint();
-                }
+        zoomPlus.addActionListener(e -> {
+            if (ratio + 0.1 <= 1)
+            {
+                ratio = Math.round((ratio + 0.1) * 10.0) / 10.0;
+                System.out.println(ratio);
+                afficherBins();
+                revalidate();
+                repaint();
             }
         });
         menuOptions.add(zoomPlus);
 
         JMenuItem zoomMinus = new JMenuItem("-");
-        zoomMinus.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                if (ratio - 0.1 >= 0)
-                {
-                    ratio = Math.round((ratio - 0.1) * 10.0) / 10.0;
-                    System.out.println(ratio);
-                    afficherBins();
-                    revalidate();
-                    repaint();
-                }
-
+        zoomMinus.addActionListener(e -> {
+            if (ratio - 0.1 > 0)
+            {
+                ratio = Math.round((ratio - 0.1) * 10.0) / 10.0;
+                System.out.println(ratio);
+                afficherBins();
+                revalidate();
+                repaint();
             }
+
         });
         menuOptions.add(zoomMinus);
 
@@ -75,31 +77,12 @@ public class Afficheur extends JFrame {
         setVisible(true);
     }
 
-    public static int[] trouverFacteursProches(int nombre) {
-        int[] facteurs = new int[2];
-
-        // Chercher les deux facteurs les plus proches du carré racine du nombre
-        int racine = (int) Math.sqrt(nombre);
-        int facteur1 = racine;
-        while (nombre % facteur1 != 0) {
-            facteur1--;
-        }
-        int facteur2 = nombre / facteur1;
-
-        facteurs[0] = facteur1;
-        facteurs[1] = facteur2;
-
-        // Trier les facteurs dans l'ordre décroissant
-        Arrays.sort(facteurs);
-
-        return facteurs ;
-    }
-
     private void afficherBins() {
         JPanel mainPanel = new JPanel(); // Panneau principal pour tous les bins
         mainPanel.setLayout(new FlowLayout());
 
-        for (Bin bin : bins) {
+        for (int i = 0; i < bins.size(); i++) {
+            Bin bin= bins.get(i);
             JPanel binPanel = new JPanel();
             binPanel.setLayout(null); // Utiliser un layout null pour positionner les sous-bins manuellement
             binPanel.setBorder(BorderFactory.createLineBorder(Color.BLACK));
@@ -107,11 +90,29 @@ public class Afficheur extends JFrame {
 
             afficherSousBinsRecursif(bin, binPanel);
 
+            binsPanels[i]=(binPanel);
             mainPanel.add(binPanel);
         }
 
         setContentPane(mainPanel);
         revalidate(); // Rafraîchit l'affichage
+    }
+
+    public void refreshBin(int index) {
+        if (index < 0 || index >= bins.size()) {
+            throw new IndexOutOfBoundsException("Index de bin invalide");
+        }
+
+        Bin bin = bins.get(index);
+
+        JPanel binPanel = binsPanels[index];
+        binPanel.removeAll();
+        binPanel.setPreferredSize(new Dimension((int) (bin.getWidth() * ratio), (int) (bin.getHeight() * ratio)));
+
+        afficherSousBinsRecursif(bin, binPanel);
+
+        revalidate();
+        repaint();
     }
 
     private void afficherSousBinsRecursif(Bin bin, JPanel parentPanel) {
@@ -139,7 +140,7 @@ public class Afficheur extends JFrame {
 
             // Si ce n'est pas le dernier sous-bin, ajouter la largeur au currentX
             if (i < sousBins.size() - 1) {
-                currentX += sousBin.getWidth() * ratio;
+                currentX += (int) (sousBin.getWidth() * ratio);
             } else {
                 // Si c'est le dernier sous-bin, réinitialiser currentX et positionner en bas
                 currentX = 0;
